fix(button): justify content on mobile

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -654,4 +654,5 @@
   --wrapper-margin-bottom-mobile:2rem;
   --wrapper-margin-bottom:3rem;
   --wrapper-section-padding-mobile:0;
+  --button-icon-justify-content:flex-start;
 }
